--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="icon" href="./FAVICON.svg" type="image/svg+xml">
   <title>João Victor</title>
   <meta name="description" content="Desgner Gráfico UX/UI Design Editor de Vídeo Localizado em São Paulo ">
 </head>
